--- a/index.html
+++ b/index.html
@@ -15,80 +15,18 @@
         <input type="number" id="input_height" name="height" min="1" value="1">
         Grid Width:
         <input type="number" id="input_width" name="width" min="1" value="1">
-        <input type="button" >
+        
+<!--        I switched the button from a submit to button type since the submit causes the page to reload each time and wipes out whatever table the javascript has made. I hope that was OK-->
+<!--        <input type="submit">-->
+        <input type="button" value="submit">
     </form>
 
     <h2>Pick A Color</h2>
     <input type="color" id="colorPicker">
 
     <h2>Design Canvas</h2>
-    <table id="pixel_canvas"><colgroup>
-<col style="width: 31px">
-<col style="width: 52px">
-<col style="width: 30px">
-<col style="width: 30px">
-</colgroup>
-  <tr>
-    <th class="tg-yw4l"></th>
-    <th class="tg-4luf"></th>
-    <th class="tg-yw4l"></th>
-    <th class="tg-yw4l"></th>
-  </tr>
-  <tr>
-    <td class="tg-yw4l"></td>
-    <td class="tg-yw4l"></td>
-    <td class="tg-yw4l"></td>
-    <td class="tg-yw4l"></td>
-  </tr>
-  <tr>
-    <td class="tg-yw4l"></td>
-    <td class="tg-yw4l"></td>
-    <td class="tg-45bf"></td>
-    <td class="tg-yw4l"></td>
-  </tr>
-  <tr>
-    <td class="tg-yw4l"></td>
-    <td class="tg-yw4l"></td>
-    <td class="tg-yw4l"></td>
-    <td class="tg-yw4l"></td>
-  </tr></table>
-
+    <table id="pixel_canvas"></table>
 
     <script src="designs.js"></script>
 </body>
 </html>
-
-<!--
-    <table class="tg" style="undefined;table-layout: fixed; width: 143px">
-<colgroup>
-<col style="width: 31px">
-<col style="width: 52px">
-<col style="width: 30px">
-<col style="width: 30px">
-</colgroup>
-  <tr>
-    <th class="tg-yw4l"></th>
-    <th class="tg-4luf"></th>
-    <th class="tg-yw4l"></th>
-    <th class="tg-yw4l"></th>
-  </tr>
-  <tr>
-    <td class="tg-yw4l"></td>
-    <td class="tg-yw4l"></td>
-    <td class="tg-yw4l"></td>
-    <td class="tg-yw4l"></td>
-  </tr>
-  <tr>
-    <td class="tg-yw4l"></td>
-    <td class="tg-yw4l"></td>
-    <td class="tg-45bf"></td>
-    <td class="tg-yw4l"></td>
-  </tr>
-  <tr>
-    <td class="tg-yw4l"></td>
-    <td class="tg-yw4l"></td>
-    <td class="tg-yw4l"></td>
-    <td class="tg-yw4l"></td>
-  </tr>
-</table>
--->
